# quikdb-python-sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/quickdb/: __init__.py  sdk.py
src/quickdb/config/: logger.py
src/quickdb/controllers/: __init__.py  authenticate_principals.py  client.py  create_principals.py  deploy_local.py  deploy_production.py  get_principal.py  install_dfx.py  set_owner.py
src/quickdb/file_types/: __init__.py  app.py  auth.py  database.py  database_did.py
src/quickdb/http/: __init__.py  activate_project.py  authenticate_cli.py  deactivate_project.py  encrypt_data.py  upload_code.py
src/quickdb/programs/: __init__.py  prg_config.py  prg_install.py
src/quickdb/utils/: __init__.py  constants.py  toolbox.py
src/quikdb/: __init__.py  sdk.py
src/quikdb/config/: logger.py
src/quikdb/controllers/: authenticate_principals.py  create_principals.py  deploy_local.py  deploy_production.py  get_principal.py  install_dfx.py  set_owner.py
src/quikdb/file_types/: __init__.py  app.py
src/quikdb/http/: __init__.py  activate_project.py  authenticate_cli.py  deactivate_project.py  encrypt_data.py  upload_code.py
src/quikdb/programs/: __init__.py  prg_config.py  prg_install.py
src/quikdb/utils/: toolbox.py
